k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fraud-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: fraud-prod
