k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-api
  namespace: fraud-staging
spec:
  selector:
    app: fraud-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
